--- a/extras/WiFiManager.template.html
+++ b/extras/WiFiManager.template.html
@@ -272,7 +272,7 @@ button:hover{
 			<br/><form action='/wifi' method='get'><button>Refresh</button></form>
 			<!-- /HTTP_SCAN_LINK -->
 			<!-- HTTP_SAVED -->
-			<div class='msg'><h4>Saving Credentials</h4>Trying to connect ESP to network.<br />If it fails reconnect to AP to try again</div>
+			<div class='msg'><h4>Saving Credentials</h4>Trying to connect SolarAlarm Hub to network.<br />If it fails reconnect to AP to try again</div>
 			<!-- /HTTP_SAVED -->
 			<!-- HTTP_STATUS_ON -->
 			<div class='msg P'><strong>Connected</strong> to {v}<br/><em><small>with IP {i}</small></em></div>
@@ -343,11 +343,11 @@ button:hover{
 		 		<td>Erase WiFi configuration and reboot Device. Device will not reconnect to a network until new WiFi configuration data is entered.</td></tr>
 		 		</table>
 		 		<h3>About</h3><hr>
-		 		Version v1.x.x-xxxxx<Br/>
+		 		Version v0.0.1-0004<Br/>
 		 		Build_date<br/>
 		 		Build_file<br/>
 		 		Arduino_version<br/>
-		 		<p/>Github <a href='https://github.com/tzapu/WiFiManager'>https://github.com/tzapu/WiFiManager</a>
+		 		<p/>
 			<!-- /HTTP_HELP -->
 			<!-- FORM_UPLOAD -->
 			<Br/><br/>Form UPLOAD<br/>
