--- a/extras/WiFiManager.template.html
+++ b/extras/WiFiManager.template.html
@@ -272,7 +272,7 @@ button:hover{
 			<br/><form action='/wifi' method='get'><button>Refresh</button></form>
 			<!-- /HTTP_SCAN_LINK -->
 			<!-- HTTP_SAVED -->
-			<div class='msg'><h4>Saving Credentials</h4>Trying to connect SolarAlarm Hub to network.<br />If it fails reconnect to AP to try again</div>
+			<div class='msg'><h4>Saving Credentials</h4>Trying to connect Inventon SolarAlarm Hub to network.<br />If it fails reconnect to AP to try again</div>
 			<!-- /HTTP_SAVED -->
 			<!-- HTTP_STATUS_ON -->
 			<div class='msg P'><strong>Connected</strong> to {v}<br/><em><small>with IP {i}</small></em></div>
